# NuggetGame

./: .clang-format  .doxyfile  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  TODO.md  build_docs.sh  cmake_config.json  config.ini
AssetTool/: App.xaml  App.xaml.cs  AssetDescriptor.cpp  AssetDescriptor.cs  AssetDescriptor.h  AssetTool.csproj  AssetTool.sln  CMakeLists.txt  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  main.cpp
AssetTool/App/: main.cpp
AssetTool/AssetTool/: App.axaml  App.axaml.cs  AssetTool.csproj  ViewLocator.cs
AssetTool/AssetTool.Desktop/: AssetTool.Desktop.csproj  Program.cs  app.manifest
AssetTool/AssetTool/ViewModels/: MainViewModel.cs  ViewModelBase.cs
AssetTool/AssetTool/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
AssetTool/Properties/: Resources.Designer.cs
AssetTool/lib/: AssetDescriptor.h
Assets/levels/: UpAndUp.level
Assets/tiled/: NuggetGame.tsx  TestMap.csv  TestMap.json  TestMap.tmx  UpAndUp.json
Core/: AssetDescriptor.cpp  AssetDescriptor.h  Camera.cpp  Camera.h  Color.cpp  Cursor.h  Framebuffer.cpp  Framebuffer.h  Input.cpp  Input.h  InputCodes.h  InputEvents.h  Level.cpp  Level.h  Logger.cpp  Logger.h  Movie.h  NativePlatform.h  Rigidbody.cpp  Rigidbody.h  STL.h  Scene.cpp  Scene.h  SceneContext.cpp  SceneContext.h  Shader.cpp  Shader.h  Sprite.h  SpriteBatch.h  SpriteRenderer.cpp  SpriteRenderer.h  Tilemap.cpp  Tilemap.h  Transform.cpp  Transform.h  Types.h  Utilities.inl
Core/Components/: GUI.cpp  GUI.h  Rigidbody.cpp  Rigidbody.h  SpriteRenderer.cpp  SpriteRenderer.h  Tilemap.cpp
Core/Engine/: AudioContext.cpp  AudioContext.h  Camera.cpp  DebugPhysics.cpp  DebugPhysics.h  DebugUI.cpp  DebugUI.h  EngineSettings.cpp  EngineSettings.h  GameApp.cpp  GameApp.h  GameUI.cpp  GameUI.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsError.cpp  Input.cpp  Input.h  PhysicsContext.cpp  PhysicsContext.h  Resources.cpp  Resources.h
Core/Interfaces/: Component.h  Drawable.h  GameObject.h  InputListener.h  Lifetime.h  RenderPass.h  Serializable.h  UIDocument.h  UIListener.h
Core/Shaders/: Sprite.glsl  SpriteBatch.glsl
Docs/html/: _asset_descriptor_8cpp.html  _asset_descriptor_8cpp_source.html  _asset_descriptor_8h.html  _asset_descriptor_8h.js  _asset_descriptor_8h_source.html  _asset_manifest_8cpp.html  _asset_manifest_8cpp_source.html  _asset_manifest_8h.html  _asset_manifest_8h.js  _asset_manifest_8h_source.html  _asset_pak_8cpp.html  _asset_pak_8cpp.js  _asset_pak_8cpp_source.html  _asset_pak_8h.html  _asset_pak_8h.js  _asset_pak_8h_source.html  _audio_context_8cpp.html  _audio_context_8cpp.js  _audio_context_8cpp_source.html  _audio_context_8h.html  _audio_context_8h.js  _audio_context_8h_source.html  _camera_8cpp.html  _camera_8cpp.js  _camera_8cpp_source.html  _camera_8h.html  _camera_8h.js  _camera_8h_source.html  _color_8cpp.html  _color_8cpp_source.html  _color_8h.html  _color_8h.js  _color_8h_source.html  _component_8h.html  _component_8h.js  _component_8h_source.html  _cursor_8cpp.html  _cursor_8cpp.js  _cursor_8cpp_source.html  _cursor_8h.html  (+506 more)
Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  (+95 more)
Game/: Floor.cpp  Floor.h  Level.cpp  Level.h  Levels.h  Nugget.cpp  Nugget.h  app.rc  main.cpp
Game/Res/: resource.h
Game/UI/: MainMenu.cpp  MainMenu.css  MainMenu.h  MainMenu.html  PauseMenu.h  SettingsMenu.cpp  SettingsMenu.css  SettingsMenu.h  SettingsMenu.html  ui_elements.psd  ui_elements.tga
Lib/: glad.c
Lib/RmlUi/: RmlUi_Platform_GLFW.cpp
Lib/glad/: glad.h
NuggetGame/: CMakeLists.txt  Level.cpp  Level.h  Levels.h  Nugget.cpp  Nugget.h  main.cpp
NuggetGame/Res/: resource.h
NuggetGame/UI/: MainMenu.cpp  MainMenu.css  MainMenu.h  SettingsMenu.cpp  SettingsMenu.css
Packer/: NugPak.cpp  Packer.cpp  Packer.h  Unpacker.cpp  Unpacker.h
Scripts/: bootstrap_vcpkg.py  build_all.sh  build_docs.sh  cmake_configure_all.py  configure_all.py  create_engine_release.sh
Tests/: CMakeLists.txt
Tests/NuggetGame/: CMakeLists.txt
Tests/XEN-AssetTool/: AssetDescriptor.test.cpp  AssetManifest.test.cpp  AssetMetadata.test.cpp  AssetPak.test.cpp  CMakeLists.txt
Tests/XEN-Core/: CMakeLists.txt
Tests/XEN-PlatformTools/: CMakeLists.txt
XEN-AssetTool/: AssetDescriptor.cpp  AssetDescriptor.h  AssetManifest.cpp  AssetManifest.h  AssetMetadata.cpp  AssetMetadata.h  AssetPak.cpp  AssetPak.h  AssetTest.cpp  AssetTool.h  Audio.manifest  CMakeLists.txt  Fonts.manifest  Levels.manifest  Sprites.manifest  main.cpp  manifests.json
XEN-Core/: CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Cursor.cpp  GameObject.h  Logger.cpp  Logger.h  Movie.cpp  NativePlatform.h  Primitives.h  STL.cpp  STL.h  Scene.cpp  Shader.cpp  Sprite.h  SpriteBatch.h  Types.h  Utilities.inl
XEN-Core/Components/: Rigidbody.h  SpriteRenderer.cpp  SpriteRenderer.h  Tilemap.cpp  Tilemap.h  Transform.h
XEN-Core/Engine/: AudioContext.cpp  AudioContext.h  DebugPhysics.cpp  EngineSettings.cpp  GameApp.cpp  GameApp.h  GameUI.cpp  GraphicsError.h  Input.h  InputCodes.h  InputEvents.h  PhysicsContext.h  Profiler.cpp  Profiler.h  Resources.cpp  Resources.h
XEN-Core/Interfaces/: GameObject.h  UIListener.h
XEN-Core/Shaders/: Sprite.glsl
XEN-Pak/: CMakeLists.txt  XPak.cpp  XPak.h  main.cpp
XEN-PlatformTools/: CMakeLists.txt  IO.cpp  IO.h  PlatformTools.h
